objects/ScCollection_TriggerExecutionSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings is used to control the execution of riggers for collection process.</description>
    <fields>
        <fullName>CRMTrgOnEventToUpdateAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_AccountTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDMTargetTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BDM Target Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ContactTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_MortgageAppTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mortgage Application Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pafss_Send_Email_Commercial_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Commercial Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pafss_Send_Email_Consumer_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Consumer Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollectionQueueContractTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Queue Contract Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_BankAccountTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_CollectionContractTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_ContractSettingTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Setting Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_ContractStatusTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Status Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Create_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Delete_Direct_Debit_Paf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Direct Debit Paf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Enable_Letter_Functionality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Letter Functionality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hold_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Loan_Payment_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Transaction Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_PartyTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Party Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_PersonalContractTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pl Contract Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_PreferenceTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Preference Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_PromiseToPayTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promise To Pay Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_SyncActionCodeName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Action Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sync_Interaction_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Interaction Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_UserTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this check box is true user trigger would be executed</description>
        <label>User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pafss_PartyTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Party Trigger For PAF</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Execution Settings</label>
</CustomObject>